# distant

./: .dockerignore  .gitignore  AGENTS.md  BUILDING.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  PLAN.md  PLUGINS.md  PRD.md  PROGRESS.md  PUBLISH.md  README.md  build.rs  claude-guide.md  flake.nix  rustfmt.toml
distant-auth/: Cargo.toml  README.md
distant-auth/src/: authenticator.rs  handler.rs  lib.rs  methods.rs
distant-auth/src/methods/: none.rs  static_key.rs
distant-core/: Cargo.toml  README.md
distant-core-client/: Cargo.toml
distant-core-client/src/: lib.rs  reconnect.rs
distant-core-client/src/builder/: windows.rs
distant-core-client/src/channel/: mailbox.rs
distant-core-manager/: Cargo.toml
distant-core-manager/src/: server.rs
distant-core-manager/src/data/: request.rs
distant-core-manager/src/server/: config.rs
distant-core-plugin/: Cargo.toml
distant-core-plugin/src/: common.rs  lib.rs
distant-core/src/: api.rs  client.rs  constants.rs  credentials.rs  data.rs  lib.rs  protocol.rs  serde_str.rs  server.rs
distant-core/src/api/: local.rs  reply.rs
distant-core/src/auth/: authenticator.rs  handler.rs  methods.rs  mod.rs  msg.rs
distant-core/src/client/: ext.rs  lsp.rs  mod.rs  process.rs  searcher.rs  session.rs  tunnel.rs  utils.rs  watcher.rs
distant-core/src/data/: capabilities.rs  change.rs  clap_impl.rs  cmd.rs  error.rs  filesystem.rs  map.rs  metadata.rs  pty.rs  search.rs  system.rs  utils.rs
distant-core/src/manager/: client.rs  data.rs  server.rs
distant-core/src/net/: authentication.rs  client.rs  key.rs  listener.rs  manager.rs  mod.rs  server.rs  transport.rs
distant-core/src/plugin/: mod.rs  mount.rs  process.rs
distant-core/src/protocol/: change.rs  common.rs  filesystem.rs  metadata.rs  mod.rs  mount.rs  msg.rs  permissions.rs  pty.rs  request.rs  response.rs  search.rs  system.rs  utils.rs
distant-core/src/server/: mod.rs  port.rs  relay.rs  state.rs  utils.rs
distant-core/tests/: api_tests.rs  manager_tests.rs  typed_tests.rs  untyped_tests.rs
distant-core/tests/stress/: fixtures.rs  mod.rs  utils.rs
distant-docker/: Cargo.toml
distant-docker/src/: api.rs  lib.rs  plugin.rs  process.rs  search.rs  utils.rs
distant-docker/tests/: lib.rs
distant-docker/tests/docker/: client.rs  connection.rs
distant-host/: Cargo.toml  README.md
distant-host/src/: api.rs  config.rs  constants.rs  lib.rs  plugin.rs
distant-host/src/api/: process.rs  state.rs
distant-host/tests/: host_tunnel.rs
distant-host/tests/stress/: fixtures.rs  mod.rs
distant-lua/: Cargo.toml  README.md
distant-lua-tests/: Cargo.toml  README.md
distant-lua-tests/tests/: lib.rs
distant-lua-tests/tests/common/: fixtures.rs  lua.rs  mod.rs  poll.rs  session.rs
distant-lua-tests/tests/lua/: mod.rs  session.rs
distant-lua/.cargo/: config.toml
distant-lua/src/: constants.rs  lib.rs  log.rs  runtime.rs  session.rs  utils.rs
distant-lua/src/session/: api.rs  opts.rs  proc.rs  watcher.rs
distant-lua/tests/common/: fixtures.rs
distant-lua/tests/lua/: session.rs
distant-mount/: Cargo.toml
distant-mount/src/: cache.rs  config.rs  inode.rs  lib.rs  plugin.rs  remote_fs.rs  write_buffer.rs
distant-mount/src/backend/: fuse.rs  macos_file_provider.rs  mod.rs  nfs.rs  windows_cloud_files.rs
distant-mount/src/core/: config.rs  handle.rs  mod.rs  remote.rs  runtime.rs
distant-net/: Cargo.toml  README.md
distant-net/src/: auth.rs  authentication.rs  client.rs  codec.rs  common.rs  connection.rs  handshake.rs  id.rs  key.rs  lib.rs  listener.rs  mailbox.rs  manager.rs  packet.rs  port.rs  server.rs  session.rs  transport.rs  utils.rs
distant-net/src/auth/: authenticator.rs  client.rs  data.rs  handler.rs  handshake.rs  keychain.rs  methods.rs  msg.rs  server.rs
distant-net/src/client/: builder.rs  channel.rs  config.rs  reconnect.rs  shutdown.rs
distant-net/src/codec/: plain.rs  xchacha20poly1305.rs
distant-net/src/common/: authentication.rs  connection.rs  destination.rs  keychain.rs  listener.rs  map.rs  packet.rs  port.rs  transport.rs  utils.rs  version.rs
distant-net/src/listener/: mapped.rs  mpsc.rs  oneshot.rs  tcp.rs  test.rs  unix.rs  windows.rs
distant-net/src/manager/: client.rs  data.rs  server.rs
distant-net/src/packet/: request.rs  response.rs
distant-net/src/server/: builder.rs  config.rs  connection.rs  context.rs  ext.rs  handler.rs  ref.rs  reply.rs  shutdown_timer.rs  state.rs
distant-net/src/session/: channel.rs
distant-net/src/transport/: framed.rs  inmemory.rs  mpsc.rs  raw.rs  router.rs  serde.rs  stateful.rs  tcp.rs  test.rs  typed.rs  unix.rs  untyped.rs  windows.rs
distant-net/tests/: auth.rs  manager_tests.rs  typed_tests.rs  untyped_tests.rs
distant-plugin/: Cargo.toml
distant-plugin-ssh/: Cargo.toml
distant-plugin-ssh/src/: api.rs  lib.rs  utils.rs
distant-plugin-ssh/tests/: lib.rs
distant-plugin-ssh/tests/ssh2/: ssh.rs
distant-plugin-ssh/tests/sshd/: mod.rs
distant-plugin/src/: api.rs  client.rs  common.rs  handlers.rs  lib.rs
distant-plugin/src/api/: checker.rs  ctx.rs  unsupported.rs
distant-plugin/src/client/: err.rs  ext.rs
distant-plugin/src/common/: map.rs  msg.rs  stream.rs  utils.rs
distant-protocol/: Cargo.toml  README.md
distant-protocol/src/: common.rs  lib.rs  msg.rs  request.rs  response.rs  utils.rs
distant-protocol/src/common/: cmd.rs  (+10 more)
distant-service/: Cargo.toml
distant-service/src/: launchd.rs  lib.rs  sc.rs
distant-ssh/: Cargo.toml  README.md
distant-ssh/src/: api.rs  auth.rs  config.rs  lib.rs  plugin.rs  pool.rs  process.rs  proxy.rs  search.rs  utils.rs
distant-ssh/tests/: lib.rs
distant-ssh2/: Cargo.toml  README.md
distant-ssh2/src/: api.rs  handler.rs  info.rs  lib.rs  process.rs  utils.rs
distant-ssh2/tests/: lib.rs  sshd.rs  utils.rs
distant-test-harness/: Cargo.toml
distant-test-harness/src/: backend.rs  docker.rs  exe.rs  lib.rs  manager.rs  mount.rs  process.rs  pty.rs  scripts.rs  singleton.rs  sshd.rs  utils.rs
distant-test-harness/tests/: tcp_echo_server.rs
(+947 files in other folders)
