[package]
name = "distant"
description = "Operate on a remote computer through file and process manipulation"
categories = ["command-line-utilities"]
keywords = ["cli"]
version.workspace = true
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2024"
rust-version = "1.88.0"
homepage = "https://github.com/chipsenkbeil/distant"
repository = "https://github.com/chipsenkbeil/distant"
readme = "README.md"
license.workspace = true

[workspace]
members = [
    "distant-core",
    "distant-docker",
    "distant-host",
    "distant-ssh",
    "distant-test-harness",
]

[workspace.package]
version = "0.21.0-dev"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)'] }

[workspace.dependencies]
distant-core = { version = "=0.21.0-dev", path = "distant-core" }
distant-docker = { version = "=0.21.0-dev", path = "distant-docker" }
distant-host = { version = "=0.21.0-dev", path = "distant-host" }
distant-ssh = { version = "=0.21.0-dev", path = "distant-ssh", default-features = false, features = ["serde"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["docker", "host", "ssh", "pty"]
docker = ["dep:distant-docker"]
host = ["dep:distant-host"]
pty = ["distant-host/pty"]
ssh = ["dep:distant-ssh"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
console = "0.16.2"
config = { version = "0.15.19", default-features = false, features = ["toml"] }
derive_more = { version = "2.1.1", default-features = false, features = ["display", "from", "error", "is_variant"] }
dialoguer = { version = "0.12.0", default-features = false }
distant-core = { workspace = true }
distant-host = { workspace = true, optional = true }
directories = "5.0.1"
file-mode = "0.1.2"
flexi_logger = "0.31.8"
indicatif = "0.17"
indoc = "2.0.7"
log = "0.4.29"
once_cell = "1.21.3"
rand = "0.8.5"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shell-words = "1.1.1"
service-manager = { version = "0.11.0", features = ["clap", "serde"] }
tabled = "0.20.0"
tokio = { version = "1.50.0", features = ["full"] }
toml_edit = { version = "0.25.4", features = ["serde"] }
terminal_size = "0.2.6"
termwiz = "0.23.3"
typed-path = "0.12.3"
which = "8.0.0"
winsplit = "0.1.0"
whoami = "2.1.1"

# Optional Docker backend
distant-docker = { workspace = true, optional = true }

# SSH backend (optional)
distant-ssh = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
fork = "0.1.23"

[target.'cfg(windows)'.dependencies]
sysinfo = "0.33.0"
windows-service = "0.8.0"

[dev-dependencies]
assert_cmd = "2.1"
assert_fs = "1.1.3"
distant-test-harness = { path = "distant-test-harness", features = ["docker"] }
env_logger = "0.11.9"
expectrl = "0.8"
indoc = "2.0.7"
once_cell = "1"
predicates = "3.1.4"
regex = "1"
rstest = "0.26.1"
serde_json = "1"
test-log = "0.2.19"
toml = "0.7"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/distant-{ target }{ binary-ext }"
bin-dir = "distant-{ target }{ binary-ext }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/distant-universal-apple-darwin"
bin-dir = "distant-universal-apple-darwin"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/distant-universal-apple-darwin"
bin-dir = "distant-universal-apple-darwin"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)'] }

[patch.crates-io]
# Patched nix 0.29.0: removes IFF_NOTRAILERS for NetBSD (removed upstream
# in libc 0.2.180). Backport of nix-rust/nix#2724 (landed in nix 0.31.0).
# Remove this patch when upstream crates (termwiz, russh, mac_address)
# update to nix >= 0.31.
nix = { path = "patches/nix-0.29.0" }
