[package]
name = "distant-core-manager"
description = "Core manager library for distant, providing client & server implementation of a manager"
categories = ["network-programming"]
keywords = ["client", "server", "manager", "network", "distant"]
version = "0.21.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2021"
homepage = "https://github.com/chipsenkbeil/distant"
repository = "https://github.com/chipsenkbeil/distant"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1.68"
derive_more = { version = "0.99.17", default-features = false, features = ["display", "from", "error"] }
distant-core-net = { version = "=0.21.0", path = "../distant-core-net" }
log = "0.4.18"
serde = { version = "1.0.163", features = ["derive"] }

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.11"
tokio = { version = "1.28.2", features = ["full"] }
