[package]
name = "distant-core"
description = "Core library for distant, enabling operation on a remote computer through file and process manipulation"
categories = ["network-programming"]
keywords = ["api", "async"]
version = "0.20.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2021"
homepage = "https://github.com/chipsenkbeil/distant"
repository = "https://github.com/chipsenkbeil/distant"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
default = []
tests = []

[dependencies]
bitflags = "2.3.1"
bytes = "1.4.0"
chacha20poly1305 = "0.10.1"
const-str = "0.5.6"
derive_more = { version = "0.99.17", default-features = false, features = ["as_mut", "as_ref", "deref", "deref_mut", "display", "from", "error", "into", "into_iterator", "is_variant", "try_into"] }
dyn-clone = "1.0.11"
flate2 = "1.0.26"
futures = "0.3.28"
hex = "0.4.3"
hkdf = "0.12.3"
log = "0.4.18"
num_cpus = "1.15.0"
once_cell = "1.17.2"
p256 = { version = "0.13.2", features = ["ecdh", "pem"] }
paste = "1.0.12"
rand = { version = "0.8.5", features = ["getrandom"] }
regex = "1.8.3"
rmp = "0.8.11"
rmp-serde = "1.1.1"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_bytes = "0.11.9"
serde_json = "1.0.96"
sha2 = "0.10.6"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }

[dev-dependencies]
env_logger = "0.10.0"
tempfile = "3.5.0"
test-log = "0.2.11"
