[package]
name = "distant-core"
description = "Core library for distant, enabling operation on a remote computer through file and process manipulation"
categories = ["network-programming"]
keywords = ["api", "async"]
version.workspace = true
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2024"
homepage = "https://github.com/chipsenkbeil/distant"
repository = "https://github.com/chipsenkbeil/distant"
readme = "README.md"
license.workspace = true

[features]
default = []
tests = []

[dependencies]
bitflags = "2.11.0"
bytes = "1.11.1"
chacha20poly1305 = "0.10.1"
const-str = "1.1.0"
derive_more = { version = "2.1.1", default-features = false, features = ["as_ref", "deref", "deref_mut", "display", "from", "error", "into", "into_iterator", "is_variant", "try_into"] }
dyn-clone = "1.0.20"
flate2 = "1.1.9"
futures = "0.3.32"
hex = "0.4.3"
hkdf = "0.12.4"
log = "0.4.29"
p256 = { version = "0.13.2", features = ["ecdh", "pem"] }
rand = "0.8.5"
regex = "1.12.3"
rmp = "0.8.15"
rmp-serde = "1.3.1"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.149"
sha2 = "0.10.6"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
socket2 = "0.6"

[lints]
workspace = true

[dev-dependencies]
env_logger = "0.11.9"
tempfile = "3.26.0"
test-log = "0.2.19"
