[package]
name = "distant-docker"
description = "Library to enable Docker container interaction for use with distant sessions"
categories = ["network-programming"]
version.workspace = true
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2024"
homepage = "https://github.com/chipsenkbeil/distant"
repository = "https://github.com/chipsenkbeil/distant"
readme = "README.md"
license.workspace = true

[features]
default = []

[dependencies]
async-once-cell = "0.5.4"
bollard = "0.20"
bytes = "1"
derive_more = { version = "2.1.1", default-features = false, features = ["display", "error"] }
distant-core = { workspace = true }
futures = "0.3.32"
log = "0.4.29"
rand = "0.8.5"
regex = "1"
semver = "1"
serde_json = "1"
shlex = "1.3"
tar = "0.4"
tokio = { version = "1.50.0", features = ["full"] }
typed-path = "0.12.3"

# Optional serde support for data structures
serde = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
anyhow = "1.0.102"
assert_fs = "1.1.3"
distant-test-harness = { path = "../distant-test-harness", features = ["docker"] }
env_logger = "0.11.9"
predicates = "3.1.4"
rstest = "0.26.1"
test-log = "0.2.19"

[lints]
workspace = true
