[package]
name = "distant-host"
description = "Library implementing the distant API for host-local operations"
categories = ["network-programming"]
version.workspace = true
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2024"
homepage = "https://github.com/chipsenkbeil/distant"
repository = "https://github.com/chipsenkbeil/distant"
readme = "README.md"
license.workspace = true

[features]
default = ["macos-fsevent"]

# If specified, will use MacOS FSEvent for file watching
macos-fsevent = ["notify/macos_fsevent"]

# If specified, will use MacOS kqueue for file watching
macos-kqueue = ["notify/macos_kqueue"]

[dependencies]
distant-core = { workspace = true }
grep = "0.2.12"
ignore = "0.4.20"
log = "0.4.29"
notify = { version = "8.2.0", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-full = { version = "0.7.0", default-features = false  }
num_cpus = "1.17.0"
portable-pty = "0.8.1"
rand = "0.8.5"
shell-words = "1.1.1"
tokio = { version = "1.50.0", features = ["full"] }
walkdir = "2.5.0"
which = "8.0.0"
whoami = "2.1.1"
winsplit = "0.1.0"

[dev-dependencies]
assert_fs = "1.1.3"
distant-test-harness = { path = "../distant-test-harness" }
env_logger = "0.11.9"
indoc = "2.0.7"
once_cell = "1.21.3"
predicates = "3.1.4"
rstest = "0.26.1"
tempfile = "3"
test-log = "0.2.19"
