[package]
name = "distant-lua-tests"
description = "Tests for distant-lua crate"
version = "0.0.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
publish = false

[features]
default = ["lua51", "vendored"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
vendored = ["mlua/vendored"]

[dependencies]
assert_fs = "1.0.4"
distant-core = { path = "../distant-core" }
futures = "0.3.17"
indoc = "1.0.3"
mlua = { version = "0.7.3", features = ["async", "macros", "serialize"] }
once_cell = "1.8.0"
predicates = "2.0.2"
rstest = "0.11.0"
tokio = { version = "1.12.0", features = ["rt", "sync"] }
