[package]
name = "distant-lua"
description = "Lua bindings to the distant Rust crates"
categories = ["api-bindings", "network-programming"]
keywords = ["api", "async"]
version = "0.15.0-alpha.6"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/distant"
repository = "https://github.com/chipsenkbeil/distant"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
distant-core = { version = "=0.15.0-alpha.6", path = "../distant-core" }
distant-ssh2 = { version = "=0.15.0-alpha.6", features = ["serde"], path = "../distant-ssh2" }
futures = "0.3.17"
mlua = { version = "0.6.4", features = ["luajit", "vendored", "module", "serialize", "async", "macros"] }
once_cell = "1.8.0"
oorandom = "11.1.3"
paste = "1.0.5"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] }
whoami = "1.1.4"
