[package]
name = "distant-lua"
description = "Lua bindings to the distant Rust crates"
categories = ["api-bindings", "network-programming"]
keywords = ["api", "async"]
version = "0.15.0-alpha.19"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/distant"
repository = "https://github.com/chipsenkbeil/distant"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["lua51", "vendored"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
vendored = ["mlua/vendored"]

[dependencies]
distant-core = { version = "=0.15.0-alpha.19", path = "../distant-core" }
distant-ssh2 = { version = "=0.15.0-alpha.19", features = ["serde"], path = "../distant-ssh2" }
futures = "0.3.17"
log = "0.4.14"
mlua = { version = "0.6.6", features = ["async", "macros", "module", "serialize"] }
once_cell = "1.8.0"
oorandom = "11.1.3"
paste = "1.0.5"
serde = { version = "1.0.130", features = ["derive"] }
simplelog = "0.10.2"
tokio = { version = "1.12.0", features = ["macros", "time"] }
whoami = "1.1.4"

[dev-dependencies]
rstest = "0.11.0"
