[package]
name = "distant-mount"
description = "Mount remote filesystems via distant protocol"
version.workspace = true
edition = "2024"
license.workspace = true

[features]
default = ["fuse"]
fuse = ["dep:fuser", "dep:libc"]

[dependencies]
distant-core = { workspace = true }
log = "0.4.29"
tokio = { version = "1.50.0", features = ["full"] }
lru = "0.14"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "macos"))'.dependencies]
fuser = { version = "0.17", optional = true }
libc = { version = "0.2", optional = true }

[lints]
workspace = true
