[package]
name = "distant-mount"
description = "Mount remote filesystems via distant protocol"
version.workspace = true
edition = "2024"
license.workspace = true

[features]
default = []
fuse = ["dep:fuser", "dep:libc"]
nfs = ["dep:nfsserve"]
windows-cloud-files = ["dep:cloud-filter"]
macos-file-provider = ["dep:objc2", "dep:objc2-file-provider", "dep:objc2-foundation", "dep:block2"]

[dependencies]
distant-core = { workspace = true }
async-trait = "0.1"
log = "0.4.29"
tokio = { version = "1.50.0", features = ["full"] }
lru = "0.14"
nfsserve = { version = "0.10", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "macos"))'.dependencies]
fuser = { version = "0.17", optional = true }
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-file-provider = { version = "0.3", optional = true, features = [
    "NSFileProviderReplicatedExtension",
    "NSFileProviderEnumerating",
    "NSFileProviderItem",
    "NSFileProviderDomain",
    "NSFileProviderRequest",
    "NSFileProviderError",
    "block2",
    "bitflags",
] }
objc2-foundation = { version = "0.3", optional = true, features = [
    "NSObject", "NSString", "NSError", "NSProgress", "NSURL",
    "NSData", "NSArray", "NSDictionary", "NSBundle", "NSUserDefaults",
] }
block2 = { version = "0.6", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
cloud-filter = { version = "0.0.6", optional = true }

[lints]
workspace = true
