[package]
name = "distant-plugin"
description = "Plugin library for distant that provides everything needed to build a plugin"
categories = []
keywords = []
version = "0.21.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2021"
homepage = "https://github.com/chipsenkbeil/distant"
repository = "https://github.com/chipsenkbeil/distant"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1.68"
distant-core-auth = { version = "=0.21.0", path = "../distant-core-auth" }
distant-core-protocol = { version = "=0.21.0", path = "../distant-core-protocol" }
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.11"
tokio = { version = "1.28.2", default-features = false, features = ["rt", "macros"] }
